--- a/translations/de.json
+++ b/translations/de.json
@@ -1,3 +1,108 @@
 {
 	"Primary"
+	"Backrounds"
+	"MeritsFlaws"
+	"Powers"
+	"Combat"
+	"Experience"
+	"Information"
+	"Journal"
+	"Notes"
+	"Gear"
+	"Version"
+	"ShowAll"
+	"RollOptions"
+	"SendRollsTo"
+	"Public"
+	"Private"
+	"ST"
+	"Myself"
+	"RollDifficulty"
+	"Woundpenalty"
+	"Ignorewounds"
+	"AdditionalBruisedLevels
+	"Name"
+	"RealName"
+	"Kind"
+	"Mortal"
+	"Vampire"
+	"Fera"
+	"AwakenedMage"
+	"Wraith"
+	"Player"
+	"Chronicle"
+	"Ghoul"
+	"Sorcerer"
+	"Psychic"
+	"Garou"
+	"Ajaba"
+	"Ananasi"
+	"Bastet"
+	"Cora"
+	"Kitsune"
+	"Moloke"
+	"Nuwisha"
+	"Ratkin"
+	"Rokea"
+	"Apis"
+	"Camazotz"
+	"Grondr"
+	"Gurahl"
+	"Nagah"
+	"CatMagic"
+	"Fox Magic"
+	"Kinfolk"
+	"Nature"
+	"Demeanor"
+	"Concept"
+	"Essence"
+	"Affiliation
+	"Society"
+	"ClanFamily
+	"Generation"
+	"Age"
+	"Sire"
+	"Domitor"
+	"Breed"
+	"Kin"
+	"Auspice"
+	"Aspect"
+	"Pryio"
+	"Path"
+	"Tribe"
+	"Faction"
+	"StreamVarna"
+	"Attributes"
+	"Physical"
+	"Strength"
+	"Dexterity"
+	"Stamina"
+	"Social"
+	"Charisma"
+	"Manipulation"
+	"Appearance"
+	"Mental"
+	"Perception"
+	"Intelligence"
+	"Wits"
+	"Abilities"
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 }
