--- a/translations/de.json
+++ b/translations/de.json
@@ -20,7 +20,7 @@
 	"RollDifficulty"
 	"Woundpenalty"
 	"Ignorewounds"
-	"AdditionalBruisedLevels
+	"AdditionalBruisedLevels"
 	"Name"
 	"RealName"
 	"Kind"
@@ -56,9 +56,9 @@
 	"Demeanor"
 	"Concept"
 	"Essence"
-	"Affiliation
+	"Affiliation"
 	"Society"
-	"ClanFamily
+	"ClanFamily"
 	"Generation"
 	"Age"
 	"Sire"
