--- a/translations/de.json
+++ b/translations/de.json
@@ -86,19 +86,156 @@
 	"Intelligence"
 	"Wits"
 	"Abilities"
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+	"Talents"
+	"Alertness"
+	"Athletics
+	"Awareness"
+	"Brawl"
+	"Empathy"
+	"Expression"
+	"Intimidation"
+	"Intuition"
+	"Leadership"
+	"PrimalUrge"
+	"Streetwise"
+	"Subterfuge"
+	"Hobbytalent"
+	"Skills"
+	"AnimalKen"
+	"Crafts"
+	"Dive"
+	"Etiquette"
+	"Firearms"
+	"Larceny"
+	"MaterialArts"
+	"Meditation"
+	"Melee"
+	"Performance"
+	"Research"
+	"Stealth"
+	"Survival"
+	"ProfessionalSkill"
+	"Knowledges"
+	"Academics"
+	"ArealKnowledge"
+	"Computer
+	"Enigmas"
+	"Esoterica"
+	"Finance"
+	"Investigation"
+	"Law"
+	"Medicine"
+	"Occult"
+	"Politics"
+	"Rituals"
+	"Science"
+	"Technology"
+	"Expert Knowledge"
+	"Virtues"
+	"Conscience"
+	"Convition"
+	"SelfControl"
+	"Instinct"
+	"Courage"
+	"PartofEnlightenment
+	"Willpower"
+	"Roll"
+	"BloodPool"
+	"MaximumBloodpool"
+	"BloodperTurn"
+	"Rage"
+	"Gnosis"
+	"Mana"
+	"Quintessence"
+	"Paradox"
+	"Health"
+	"Bruised"
+	"Hurt"
+	"Injured"
+	"Wounded"
+	"mauled"
+	"Crippled"
+	"Incapacatiated"
+	"RenownRank"
+	"0Cub"
+	"1Cliath"
+	"2Fostern"
+	"3Adren"
+	"4Athro"
+	"5Elder"
+	"6Legend"
+	"Rank1"
+	"Rank2"
+	"Rank3"
+	"Rank4"
+	"Rank5"
+	"Rank6Legend"
+	"0Cub"
+	"1Thekhmet"
+	"2Aka"
+	"3Tilau"
+	"4Hani"
+	"5BonBhat"
+	"6Legend"
+	"0Cub"
+	"1Oviculum"
+	"2Neocornix"
+	"3Ales"
+	"4Colucris"
+	"5Corvus"
+	"6Legend"
+	"0Cub"
+	"1Kovi"
+	"2Verde"
+	"3Sorna"
+	"4Talchwi"
+	"5Matae"
+	"6Legend"
+	"0Cub"
+	"1Yakan"
+	"2Kiko"
+	"3Koryo"
+	"4Reiko"
+	"5Tenko"
+	"6Legend"
+	"0Uninitiated"
+	"1Hatchling"
+	"2SonDoughter"
+	"3BrotherSister"
+	"4FatherMother"
+	"5GrandfatherGrandmother"
+	"6Legend"
+	"0OpneningEye"
+	"1SingingBrook"
+	"2RazoredArrow"
+	"3SilkenNoose"
+	"4ThunderChakram"
+	"5SilverCoil"
+	"6MouthoftheSesha"
+	"0Cub"
+	"1Rakka"
+	"2Voto"
+	"3Tava"
+	"4Teppen"
+	"5Rrrrrt"
+	"6Legend"
+	"Cunning"
+	"Ferocity"
+	"Glory"
+	"Harmony"
+	"Honor"
+	"Humor"
+	"Infamy"
+	"Innovation"
+	"Kagayaki"
+	"Obedience"
+	"Obligaton"
+	"Succor"
+	"Toru"
+	"Valor"
+	"Wisdom"
+	"ClanWeakness"
+	1872
 	
 	
 	
