--- a/translations/de.json
+++ b/translations/de.json
@@ -88,7 +88,7 @@
 	"Abilities"
 	"Talents"
 	"Alertness"
-	"Athletics
+	"Athletics"
 	"Awareness"
 	"Brawl"
 	"Empathy"
@@ -118,7 +118,7 @@
 	"Knowledges"
 	"Academics"
 	"ArealKnowledge"
-	"Computer
+	"Computer"
 	"Enigmas"
 	"Esoterica"
 	"Finance"
@@ -137,7 +137,7 @@
 	"SelfControl"
 	"Instinct"
 	"Courage"
-	"PartofEnlightenment
+	"PartofEnlightenment"
 	"Willpower"
 	"Roll"
 	"BloodPool"
@@ -235,11 +235,152 @@
 	"Valor"
 	"Wisdom"
 	"ClanWeakness"
-	1872
-	
-	
-	
-	
+	"Backrounds"
+	"Backround"
+	"Rating"
+	"Description"
+	"PooledBackgrounds"
+	"Background"
+	"Rating"
+	"Anchor"
+	"Contributed"
+	"Desciption"
+	"MertisFlaws"
+	"Merits"
+	"Merit"
+	"PointValue"
+	"Type"
+	"Description"
+	"Flaws"
+	"Flaw"
+	"PointValue"
+	"Type"
+	"Description"
+	"Powers"
+	"VampiricPowers"
+	"IncreasedPhysicalAttributes"
+	"Attribute"
+	"Rating"
+	"Increased"
+	"Strenght"
+	"Dexterity"
+	"Stamina"
+	"Disciplines"
+	"Discipline"
+	"Physical"
+	"BloodMagic"
+	"ChooseDiscipline"
+	"Potence"
+	"Celerity"
+	"Fortitude"
+	"ChooseDiscipline"
+	"Koldunism"
+	"Necromancy"
+	"Thaumaturgy"
+	"Akhu"
+	"DurAnKi"
+	"DarkThaumaturgy"
+	"Willpower"
+	"BloodPool"
+	"MaximumBloodpool"
+	"BloodperTurn"
+	"LernedDisciplinePowers"
+	"Discipline"
+	"Rating"
+	"PowerName"
+	"Attribute"
+	"Ability"
+	"DicePool"
+	"Diff"
+	"Desc"
+	"Strenght"
+	"Dexterity"
+	"Stamina"
+	"Charisma"
+	"Manipulation"
+	"Appearance"
+	"Perception"
+	"Intelligence"
+	"Wits"
+	"Willpower"
+	"None"
+	"Alertness"
+	"Athletics"
+	"Awareness"
+	"Brwal"
+	"Empathy"
+	"Expression"
+	"Intimidation"
+	"Intuition"
+	"Leadership"
+	"PrimalUrge"
+	"Streetwise"
+	"Subterfuge"
+	"AnimalKen"
+	"Crafts"
+	"Drive"
+	"Etiquette"
+	"Firearms"
+	"Larceny"
+	"MaterialArts"
+	"Melee"
+	"Performance"
+	"Research"
+	"Stealth"
+	"Survival"
+	"Academics"
+	"AreaKnowledge"
+	"Computer"
+	"Enigmas"
+	"Esoterica"
+	"Finance"
+	"Investigation"
+	"Law"
+	"Meidicine"
+	"Occult"
+	"Politics"
+	"Technology"
+	"Discipline"
+	"None"
+	"Description"
+	"System"
+	"CombinationDisciplinePowers"
+	"CombinationPower"
+	"Attribute"
+	"Ability"
+	"Diff"
+	"Desc"
+	"DisciplineRequirements"
+	"Desecription"
+	"System"
+	"PrimaryPath"
+	"KoldunismRituals"
+	"Necromancy"
+	"NecromancyRituals"
+	"Thaumaturgy"
+	"ThaumaturgyRituals"
+	"Akhu"
+	"AkhuRituals"
+	"DurAnKi"
+	"DurAnKiRituals"
+	"DarkThaumaturgy"
+	"DarkThaumaturgyRituals"
+	"Combat"
+	"Soaking"
+	"Attribute"
+	"Armor"
+	"Bashing"
+	"Stamina"
+	"None"
+	"Experience"
+	"Experiencetospend"
+	"Totalspent"
+	"TOtalexperienceearned"
+	"EarnedExP"
+	"Expenditure"
+	"ExPspent"
+	"IngameDate"
+	"RealDate"
 	
 	
 }
