--- a/translations/de.json
+++ b/translations/de.json
@@ -381,6 +381,91 @@
 	"ExPspent"
 	"IngameDate"
 	"RealDate"
-	
-	
-}
+	"Description"
+	"Age"
+	"ApparentAge"
+	"PlaceofBirth"
+	"DateofBirth"
+	"RIP"
+	"Hair"
+	"Eyes"
+	"Skin"
+	"Ethnicity"
+	"Nationality"
+	"Height"
+	"Weight"
+	"Sex"
+	"Gender"
+	"History"
+	"Journal"
+	"ShowSections"
+	"BloodBond"
+	"Vinculum"
+	"Boons"
+	"Debtor"
+	"ToWhom"
+	"Type"
+	"Desc"
+	"Trivial"
+	"Minor"
+	"Major"
+	"Life"
+	"None"
+	"BloodBonds"
+	"Who"
+	"ToTarget"
+	"ToMe"
+	"Desc"
+	"NoBloodBond"
+	"FirstDrink"
+	"SecondDrink"
+	"FullBloodBond"
+	"Notes"
+	"PossessionsGear"
+	"RangedWeapons"
+	"Ammunition"
+	"Name"
+	"Type"
+	"Conceal"
+	"AmmoName"
+	"TypeCaliber"
+	"Amount"
+	"MeleeWeapons"
+	"Name"
+	"Conceal"
+	"ArmorShields"
+	"Name"
+	"VersionInfo"
+	"HideVersionInfo"
+	"DiceOptions"
+	"Name"
+	"Attribute"
+	"Abillity"
+	"Modifiers"
+	"Difficulty"
+	<!-- Placeholder data-i18n-paceholder"" -->
+	"HobbyTalent1"
+	"HobbyTalent2"
+	"HobbyTalent3"
+	"HobbyTalent4"
+	"HobbyTalent5"
+	"mandatory"
+	"ProfessionalSkill1"
+	"ProfessionalSkill2"
+	"ProfessionalSkill3"
+	"ProfessionalSkill4"
+	"ExpertKnowledge1"
+	"ExpertKnowledge2"
+	"ExpertKnowledge3"
+	"Humanity"
+	"Selfishthoughts"
+	"Minorselfishacts"
+	"Injurytoanotheraccidentalorotherwise"
+	"Theft"
+	"Accidentalviolationdrinkingavesseldryoutofstarvation"
+	"Intentionalpropertydamage"
+	"Impassionedviolationmanslaughterkillingavesselinfrenzy"
+	"Plannedviolationoutrightmurdersavoredexsanguination"
+	"Casualviolationthoughtlesskillingfeedingpastsatiation"
+	"Utterperversionorheinousacts"
+	}
