--- a/translations/de.json
+++ b/translations/de.json
@@ -365,6 +365,64 @@
 	"DurAnKiRituals"
 	"DarkThaumaturgy"
 	"DarkThaumaturgyRituals"
+	"spiritualPowers"
+	"Rites"
+	"RiteName"
+	"Level"
+	"Type"
+	"Attribute"
+	"Ability"
+	"DicePool"
+	"Diff"
+	"Desc"
+	"Accord"
+	"Caern"
+	"Death"
+	"Mystic"
+	"Punischment"
+	"Renown"
+	"Seasonal"
+	"Minor"
+	"Homestead"
+	"Milestones"
+	"Gnosis"
+	"LearnedCountermagics"
+	"RitualName"
+	"Path"
+	"Level"
+	"Attribute"	
+	"Ability"
+	"Diff"
+	"Desc"
+	"Cost"
+	"Time"
+	"Willpower"
+	"Mana"
+	"SorceryParths"
+	"PsychicPaths"
+	"Path"
+	"Rating"
+	"Practice"
+	"Attribute"
+	"Ability"
+	"DicePool"
+	"Diff"
+	"Desc"
+	"Aspected"
+	"ofAspects"
+	"2Aspects"
+	"3Aspects"
+	"4Aspects"
+	"5Aspects"
+	"PathDescription"
+	"Cost"
+	"Modifires"
+	"Time"
+	"Duration"
+	"Associated"
+	"PriceofFailure"
+	"Effects"
+	"Aspect"
 	"Combat"
 	"Soaking"
 	"Attribute"
@@ -468,4 +526,7 @@
 	"Plannedviolationoutrightmurdersavoredexsanguination"
 	"Casualviolationthoughtlesskillingfeedingpastsatiation"
 	"Utterperversionorheinousacts"
+	"RitualCost"
+	"CastingTime"
+	"Aspectname"
 	}
