--- a/translations/de.json
+++ b/translations/de.json
@@ -543,7 +543,13 @@
 	"Title"
 	<!-- Line 9368 -->
 	"ShapechangingForms"
-	
+	"Nochange"
+	"Homid"
+	"Glabro"
+	"Crinos"
+	"Hispo"
+	"Lupus"
+	"SpiritualPowers"
 	<!--Label data-i18n-label"" -->
 	"LivingRaces"
 	"LostRaces"
