Fixed a few mistakes

--- a/translations/de.json
+++ b/translations/de.json
@@ -319,7 +319,7 @@
 	"ExPspent":"EP ausgegeben",
 	"IngameDate":"Spieldatum",
 	"RealDate":"Reales Datum",
-	"ApparentAge":"Scheinbares Alter:",
+	"ApparentAge":"Scheinbares&nbsp;Alter:",
 	"PlaceofBirth":"Geburtsort:",
 	"DateofBirth":"Geburtsdatum:",
 	"RIP":"Todestag:",
@@ -330,8 +330,8 @@
 	"Nationality":"Nationalit&auml;t:",
 	"Height":"Gr&ouml;&szlig;e:",
 	"Weight":"Gewicht:",
-	"Sex":"Bio. Geschlecht:",
-	"Gender":"Soz. Geschlecht:",
+	"Sex":"Bio.&nbsp;Geschlecht:",
+	"Gender":"Soz.&nbsp;Geschlecht:",
 	"History":"Hintergrund",
 	"ShowSections":"Zeige Bereiche:",
 	"BloodBonds":"Blutsb&auml;nder",
@@ -379,7 +379,7 @@
 	"Notes":"Notizen",
 	"Nuwisha":"Nuwisha",
 	"Path":"Pfad",
-	"Physical":"Körperlich?",
+	"Physical":"K&ouml;rperlich?",
 	"Player":"Spieler:",
 	"Powers":"Kräfte",
 	"Primary":"Prim&auml;r",
@@ -388,7 +388,7 @@
 	"Psychic":"Psioniker",
 	"Public":"&Ouml;ffnetlich",
 	"Ratkin":"Rattenkind",
-	"RealName":"Echter Name:",
+	"RealName":"Echter&nbsp;Name:",
 	"Rokea":"Rokea",
 	"RollDifficulty":"Schwiergkeit:",
 	"RollOptions":"W&uuml;rfeloptionen:",
@@ -406,5 +406,7 @@
 	"Vampire":"Vampir",
 	"Version":"Version/Würfelpools",
 	"Wraith":"Todesalb",
-	"Boons":"Gefallen"
+	"Boons":"Gefallen",
+	"Ask":"Fragen",
+	"Fixed":"Fest"
 }
